prevent horizontal scroll

--- a/_assets/css/_theme-overrides.scss
+++ b/_assets/css/_theme-overrides.scss
@@ -1,4 +1,4 @@
-body {
+html, body, .navbar, .section {
   overflow-x: hidden;
 }
 
